feat: Implemented GetOperationTypes

--- a/BankingService.Tests/BankingService.Tests.csproj
+++ b/BankingService.Tests/BankingService.Tests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BankingService.Core\BankingService.Core.csproj" />
+    <ProjectReference Include="..\BankingService.Infra.Database\BankingService.Infra.Database.csproj" />
   </ItemGroup>
 
 </Project>
