--- a/BankingService.Console/BankingService.Console.csproj
+++ b/BankingService.Console/BankingService.Console.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BankingService.Core\BankingService.Core.csproj" />
+    <ProjectReference Include="..\BankingService.Infra.FileSystem\BankingService.Infra.FileSystem.csproj" />
+  </ItemGroup>
+
 </Project>
