--- a/BankingService.Console/BankingService.Console.csproj
+++ b/BankingService.Console/BankingService.Console.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\BankingService.Infra.FileSystem\BankingService.Infra.FileSystem.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
