feat!: Connect one front endpoint to the read backend. And welcome #5 #6 #7

--- a/BankingService.Api/appsettings.json
+++ b/BankingService.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AllowSpecificOrigin": "http://localhost:4200",
+  "Database": {
+    "DatabaseKey": "key",
+    "DatabasePath": "F:\\Servan\\Autres\\Code\\Csharp\\BankingService\\BankingService.Api\\bin\\Debug\\net8.0"
+  }
 }
