feat: modify environments

--- a/BankingService.Api/appsettings.json
+++ b/BankingService.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowSpecificOrigin": "http://localhost:4200",
+  "AllowSpecificOrigin": "https://localhost:10000",
   "Database": {
     "DatabaseKey": "key",
     "DatabasePath": "F:\\Servan\\Autres\\Code\\Csharp\\BankingService\\BankingService.Api\\bin\\Debug\\net8.0"
