--- a/BankingService.Api/appsettings.Development.json
+++ b/BankingService.Api/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowSpecificOrigin": "http://localhost:4200"
 }
