feat: updated config files

--- a/BankingService.Api/appsettings.json
+++ b/BankingService.Api/appsettings.json
@@ -9,6 +9,6 @@
   "AllowSpecificOrigin": "https://localhost:10000",
   "Database": {
     "DatabaseKey": "key",
-    "DatabasePath": "F:\\Servan\\Autres\\Code\\Csharp\\BankingService\\BankingService.Api\\bin\\Debug\\net8.0"
+    "DatabasePath": "C:\\Servan\\Production\\BankingService\\DevDB"
   }
 }
