--- a/BankingService.ConsoleApp/appsettings.json
+++ b/BankingService.ConsoleApp/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "Database": {
     "DatabaseKey": "key",
-    "DatabasePath" : "."
+    "DatabasePath": "C:\\Servan\\Production\\BankingService\\DevDB"
   }
 }
