--- a/BankingService.Core/BankingService.Core.csproj
+++ b/BankingService.Core/BankingService.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="NLog" Version="5.2.8" />
   </ItemGroup>
 
