--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,25 +7,8 @@ on:
       - feature/actions
 
 jobs:
-
-  Tests_Backend:
-    runs-on: windows-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    
-    - name: Build Backend
-      run: dotnet build -c Debug
-    - name: Test Backend
-      run: dotnet test ./BankingService.Tests/BankingService.Tests.csproj -c Debug
   
   Package_Backend:
-    needs: Tests_Backend
     runs-on: ubuntu-latest
 
     steps:
@@ -47,3 +30,26 @@ jobs:
         with:
           name: PublishBackend
           path: ./PublishBackend
+
+  Package_Frontend:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+      
+    - name: Build Frontend  
+      working-directory: ./BankingService.Api/ClientApp
+      run: | 
+        npm ci
+        npm run build
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: PublishFrontend
+        path: ./BankingService.Api/ClientApp/dist/client-app/browser
