--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,3 +29,19 @@ jobs:
     - name: Test Backend
       run: dotnet test ./BankingService.Tests/BankingService.Tests.csproj -c Debug
   
+  Build_Frontend:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+      
+    - name: Build Frontend  
+      working-directory: ./BankingService.Api/ClientApp
+      run: | 
+        npm ci
+        npm run build
