ref: replaced production adress

--- a/BankingService.Api/appsettings.json
+++ b/BankingService.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowSpecificOrigin": "https://localhost:10000",
+  "AllowSpecificOrigin": "https://production:10000",
   "Database": {
     "DatabaseKey": "key",
     "DatabasePath": "C:\\Servan\\Production\\BankingService\\DevDB"
