feat: docker packaging

--- a/BankingService.Api/appsettings.Development.json
+++ b/BankingService.Api/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowSpecificOrigin": "http://localhost:4200"
+  "AllowSpecificOrigin": "http://localhost:4200",
+  "Database": {
+    "DatabaseKey": "key",
+    "DatabasePath": "C:\\Servan\\Production\\BankingService\\DevDB"
+  }
 }
