--- a/BankingService.Api/appsettings.json
+++ b/BankingService.Api/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowSpecificOrigin": "https://production:10000",
+  "AllowSpecificOrigin": "http://localhost:10000",
   "Database": {
     "DatabaseKey": "key",
-    "DatabasePath": "C:\\Servan\\Production\\BankingService\\DevDB"
+    "DatabasePath": "DB"
   }
 }
