feat: Added import archive folder to config

--- a/BankingService.Api/appsettings.json
+++ b/BankingService.Api/appsettings.json
@@ -10,5 +10,8 @@
   "Database": {
     "DatabaseKey": "key",
     "DatabasePath": "DB"
+  },
+  "Import": {
+    "ArchiveFolderPath": "Archives"
   }
 }
