--- a/BankingService.ConsoleApp/appsettings.json
+++ b/BankingService.ConsoleApp/appsettings.json
@@ -2,5 +2,8 @@
   "Database": {
     "DatabaseKey": "key",
     "DatabasePath": "C:\\Servan\\Production\\BankingService\\DevDB"
+  },
+  "Import": {
+    "ArchiveFolderPath": "C:\\Servan\\Production\\BankingService\\Archives"
   }
 }
