--- a/BankingService.Api/appsettings.Development.json
+++ b/BankingService.Api/appsettings.Development.json
@@ -9,5 +9,8 @@
   "Database": {
     "DatabaseKey": "key",
     "DatabasePath": "C:\\Servan\\Production\\BankingService\\DevDB"
+  },
+  "Import": {
+    "ArchiveFolderPath": "C:\\Servan\\Production\\BankingService\\Archives"
   }
 }
