feat: display transaction number

--- a/BankingService.Api/appsettings.Development.json
+++ b/BankingService.Api/appsettings.Development.json
@@ -11,6 +11,6 @@
     "DatabasePath": "C:\\Servan\\Production\\BankingService\\DevDB"
   },
   "Import": {
-    "ArchiveFolderPath": "C:\\Servan\\Production\\BankingService\\Archives"
+    "ArchiveFolderPath": "C:\\Servan\\Production\\BankingService\\DevDB\\Archives"
   }
 }
